--- a/mcp-client/src/main/resources/application.yaml
+++ b/mcp-client/src/main/resources/application.yaml
@@ -1,25 +1,27 @@
-
 spring:
   application:
     name: mcp-client
   ai:
     deepseek:
-      base-url: https://api.deepseek.com
-      api-key: sk-e94c3116427644c497d0f456657a0780
+      base-url: https://gateway.ai.cloudflare.com/v1/88a0fb740f03c57baeaa509e82bc923c/my-gateway/deepseek
+      api-key: ${DEEPSEEK_API_KEY}
       chat:
         options:
           model: deepseek-chat
     mcp:
       client:
         version: 1.0.0
-        type: SYNC  # or ASYNC for reactive applications
+        type: ASYNC  # or ASYNC for reactive applications
         toolcallback:
           enabled: true
         sse:
           connections:
             webflux-mcp-server:
-              url: http://localhost:8080
+              url: http://localhost.charlesproxy.com:8080
 
+        stdio:
+          root-change-notification: true
+          servers-configuration: classpath:mcp-servers.json
         name: ${spring.application.name}
         enabled: true
 server:
