--- a/mcp-server/src/main/resources/application.yaml
+++ b/mcp-server/src/main/resources/application.yaml
@@ -7,5 +7,6 @@ spring:
         name: webflux-mcp-server
         version: 1.0.0
         type: ASYNC
-        instructions: "接口文档"
+        instructions: "接口文档及规范"
+        base-url: http://localhost.charlesproxy.com:8080
 
