--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.5</version>
+        <version>3.5.8</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.apeto</groupId>
@@ -24,6 +24,7 @@
     <modules>
         <module>mcp-server</module>
         <module>mcp-client</module>
+        <module>deep-search-agent</module>
     </modules>
     <scm>
         <connection/>
@@ -33,7 +34,7 @@
     </scm>
     <properties>
         <java.version>21</java.version>
-        <spring-ai.version>1.0.0-RC1</spring-ai.version>
+        <spring-ai.version>1.1.0-RC1</spring-ai.version>
     </properties>
     <dependencies>
         <dependency>
@@ -77,7 +78,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.15</version>
+            <version>5.8.40</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
